# website

./: .babelrc  .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .nvmrc  .prettierignore  .prettierrc  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  Justfile  README.md  config.toml  entrypoint.sh  fly.toml  gatsby-config.js  jest.config.js  justfile  next.config.js  now.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  theme.ts  vite.config.ts  vite.config.ts.timestamp-1726605411742-dbfbef7693fdb.mjs
.github/: dependabot.yml
.sqlx/: query-7dd4099b8bace9bd740c417a49aa209d5df945c9fedd79700d217156d7c408cb.json
.zed/: tasks.json
__tests__/: Hero.test.js  Layout.spec.tsx  cardList.test.js
_data/: how-art-made-me-a-better-engineer.md
_drafts/: 2023-08-22-what-i-like-and-dislike-cargo-workspaces.md  2024-07-11-nuxt-vs-sveltekit-vs-next.md  2024-07-12-ffxiv-dawntrail-review.md  2024-07-19-my-design-philosphy.md  2024-08-12-you-should-read-the-mountain-in-the-sea.md  2024-08-12-you-should-read.md  2024-08-30-adding-internal-dashboard.md  2024-09-06-evolving-my-music-page.md  2024-10-15-creating-a-queue-for-video-processing.md  2024-10-18-pushing-notifications-to-the-client-from-postgres.md
_games/: cozy-spring-jam-2023.md
_posts/: 2022-02-15-february-status-update.md  2022-06-03-status-update-may-2023-late.md  2022-08-31-using-ai-to-augment-blog-posts.md  2022-09-01-novel-ai-helped-me-write-this.md  2022-09-01.md  2022-11-26-setting-up-my-own-static-site-generator.md  2022-11-30-streaming-foss-projects-announcement.md  2022-12-04-setting-up-my-own-static-site-generator-part-2.md  2022-12-12-my-thoughts-on-overwatch-2.md  2022-12-12-what-my-bones-know-review.md  2022-12-19-future-of-this-blog.md  2022-12-24-announcing-izfs.md  2022-12-27-setting-up-my-own-static-site-generator-part-2.md  2023-01-23-status-update-january-2023.md  2023-01-23-status-update-january.md  2023-02-15-february-status-update.md  2023-02-26-status-update-february-2023.md  2023-02-26-status-update-february.md  2023-02-27-started-maintaining-public-package.md  2023-03-16-beautiful-rust.md  2023-03-17-counting-pogs-in-rust.md  2023-03-31-status-update-march.md  2023-04-06-adding-twitch-chat-to-tauri.md  2023-04-26-status-update-april.md  2023-06-03-status-update-may-2023-late.md  2023-07-09-status-update-june.md  2023-07-30-bevy-game-in-svelte-kit.md  2023-08-13-status-update-august.md  2023-08-13-status-update-end-of-2023.md  2024-04-23-running-async-tasks-in-tauri-v2.md  2024-05-12-running-async-tasks-in-tauri-v2.md  2024-06-13-playing-with-gleam.md  2024-07-18-new-lab-gaml.md  2024-08-12-you-should-read-the-mountain-in-the-sea.md  2024-09-05-yapping-about-published-writing.md  2024-09-07-unwrapped-project.md  2024-09-12-integrating-oauth-into-sveltekit.md  2024-10-13-creating-a-small-video-streaming-service.md  2024-10-15-creating-a-queue-for-video-processing.md  2024-10-21-pushing-notifications-to-the-client-from-postgres.md  (+4 more)
app/: AboutMe.tsx  Header.tsx  globals.css  layout.tsx  openGraph.ts  page.tsx
art/: Cargo.toml
assets/: index.scss
cli/: Cargo.toml
cli/src/: git.rs  main.rs
cli/src/website/: config.rs  mod.rs  page.rs  post.rs  project.rs  series.rs
labs/eatinator/: Cargo.toml  README.md
labs/eatinator/src/: account.rs  config.rs  eatinator.rs  error.rs  main.rs  vendor.rs
labs/unwrapped/: Cargo.toml  README.md
labs/unwrapped/src/: db.rs  main.rs  routes.rs
labs/unwrapped/src/db/: mod.rs
labs/unwrapped/src/music/: spotify.rs
labs/unwrapped/src/routes/: mod.rs
server/: Cargo.toml
server/src/: main.rs
(+455 files in other folders)
