[package]
name = "sneakycrow-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { version = "4.3.5", features = ["dir_source"] }
log = "0.4.17"
env_logger = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
grass = "0.11.2"