[package]
name = "cli"
version = "4.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
handlebars = { version = "4.3.5", features = ["dir_source"] }
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
grass = "0.11.2"
walkdir = "2.3.2"
toml = "0.5.9"
pulldown-cmark = "0.9.2"
chrono = { version = "0.4.23", features = ["serde"] }
syntect = "5.0.0"
reqwest = { version = "0.11.13", features = ["json"] }
clap = { version = "4.0.29", features = ["cargo"] }