[package]
name = "unwrapped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
tokio-util = { version = "0.6", features = ["io"] }
dotenv = "0.15.0"
serde = "1.0.204"
serde_json = "1.0.122"
surf = "2.3.2"
